--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,14 +1,18 @@
-<div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-    <h3>Change your password</h3>
-    <%= devise_error_messages! %>
-    <%= f.hidden_field :reset_password_token %>
-    <div class="form-group">
-      <%= f.label :password, 'New password' %>
-        <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
-      <%= f.label :password_confirmation, 'Confirm new password' %>
-        <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
-    </div>
-     <%= f.submit 'Change my Password', :class => 'button right' %>
-  <% end %>
-</div>
+<% scope = [:devise, :passwords, :edit] %>
+
+<% content_for :content do %>
+  <div class="authform">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :put}) do |f| %>
+      <h3><%= t_view :heading, scope %></h3>
+      <%= devise_error_messages! %>
+      <%= f.hidden_field :reset_password_token %>
+      <div class="form-group">
+        <%= f.label :password, t_view(:password_label, scope) %>
+          <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
+        <%= f.label :password_confirmation, t_view(:password_confirmation_label, scope) %>
+          <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
+      </div>
+       <%= f.submit t_view(:change_button, scope), class: 'button right' %>
+    <% end %>
+  </div>
+<% end %>
