--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,14 @@
-<div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
-    <h3>Forgot your password?</h3>
-    <p>We'll send password reset instructions.</p>
-    <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
-    </div>
-     <%= f.submit 'Reset Password', :class => 'button right' %>
-  <% end %>
-</div>
+<% content_for :content do %>
+  <div class="authform">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, role: 'form'}) do |f| %>
+      <h3><%= t_view :forgot_password %></h3>
+      <p><%= t_view :password_instructions_notice %></p>
+      <%= devise_error_messages! %>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+      </div>
+       <%= f.submit t_view(:reset_password), class: 'button right' %>
+    <% end %>
+  </div>
+<% end %>
