--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,37 +1,50 @@
-<div class="authform">
-  <h3>Edit <%= resource_name.to_s.humanize %></h3>
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
-    <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
-    </div>
-    <fieldset>
-      <p>Leave these fields blank if you don't want to change your password.</p>
+<% scope = [:devise, :registrations, :edit] %>
+
+<% content_for :head do %>
+  <%= javascript_include_tag :zxcvbn %>
+<% end %>
+
+<% content_for :header do %>
+    <h1><%= t_view :heading, scope %></h1>
+<% end %>
+
+<% content_for :content do %>
+  <div class="authform">
+    <h3><%= t_view :heading, scope %> </h3>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put, role: 'form'}) do |f| %>
+      <%= devise_error_messages! %>
       <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, :autocomplete => 'off', class: 'form-control' %>
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div><%= t_view :awaiting_confirmation, scope: scope, email: resource.unconfirmed_email %></div>
+        <% end %>
       </div>
-      <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-      </div>
-    </fieldset>
-    <fieldset>
-      <p>You must enter your current password to make changes.</p>
-      <div class="form-group">
-        <%= f.label :current_password %>
-        <%= f.password_field :current_password, class: 'form-control' %>
-      </div>
-    </fieldset>
-    <%= f.submit 'Update', :class => 'button right' %>
-  <% end %>
-</div>
-<div class="authform">
-<h3>Cancel Account</h3>
-<p>Unhappy? We'll be sad to see you go.</p>
-<%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right' %>
-</div>
+      <fieldset>
+        <p><%= t_view :leave_blank_hint, scope %></p>
+        <div class="form-group">
+          <%= f.label :password %>
+          <%= f.password_field :password, autocomplete: 'off', class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+      </fieldset>
+      <fieldset>
+        <p><%= t_view :current_password_hint, scope %></p>
+        <div class="form-group">
+          <%= f.label :current_password %>
+          <%= f.password_field :current_password, class: 'form-control' %>
+        </div>
+      </fieldset>
+      <%= f.submit t_view(:update), class: 'button right' %>
+    <% end %>
+  </div>
+  <div class="authform">
+
+  <h3><%= t_view :cancel_heading, scope %></h3>
+  <p><%= t_view :cancel_hint, scope %></p>
+  <%= button_to t_view(:cancel_button, scope), registration_path(resource_name), data: {confirm: t_view(:cancel_confirm_message, scope)}, method: :delete, class: 'button right' %>
+  </div>
+<% end %>
