--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,35 @@
-<div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form'}) do |f| %>
-    <h3>Sign up</h3>
+<% content_for :head do %>
+  <%= javascript_include_tag :zxcvbn %>
+<% end %>
+
+<% scope = [:users, :sign_up] %>
+
+<% content_for :header do %>
+  <h1><%= t_view :heading, scope %></h1>
+<% end %>
+<% content_for :content do %>
+  <%= bootstrap_form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
     <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
+    <div class="row">
+      <div class="col-md-4">
+        <fieldset>
+          <legend><%= t_view :login_data_heading, scope %></legend>
+          <%= f.email_field :email, autofocus: true %>
+          <%= f.password_field :password %>
+          <%= f.password_field :password_confirmation %>
+          <div class="form-group hidden">
+            <label class="control-label"><%= t_view :password_strength, scope %></label>
+            <%
+              js_scope = [:javascript, :password]
+              pw_data = {strength_hint: t_view(:strength_hint, js_scope), mismatch_hint: t_view(:mismatch_hint, js_scope), success_hint: t_view(:success_hint, js_scope)}
+            %>
+            <%= tag :div, name: :password_strength, class: 'form-control-static alert alert-danger', data: pw_data %>
+          </div>
+        </fieldset>
+      </div>
     </div>
-    <div class="form-group">
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-    </div>
-     <%= f.submit 'Sign up', :class => 'button right' %>
+    <%= f.form_group do %>
+      <%= f.primary t_view(:register) %>
+    <% end %>
   <% end %>
-</div>
+<% end %>
