--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,15 @@
       <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
       </ul>
+      <% if current_user.present? %>
+        <ul class="nav navbar-nav navbar-right">
+          <%= navbar_menu false, "#{current_user.name}  #{icon_image('cog')}".html_safe do %>
+            <%= subnav_link_to false, edit_user_path(current_user), t_view(:edit_account, :navigation) %>
+            <%= subnav_link_to false, edit_user_registration_path, t_view(:edit_credentials, :navigation) %>
+            <%= subnav_link_to false, destroy_user_session_path, t_view(:logout, :navigation), method: :delete %>
+          <% end %>
+        </ul>
+      <% end %>
     </div>
   </div>
 </nav>
