--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,2 +1,7 @@
 <%# add navigation links to this file %>
 <li><%= link_to 'About', page_path('about') %></li>
+
+<% unless user_signed_in? %>
+  <li><%= link_to t_view(:sign_in), new_user_session_path %></li>
+  <li><%= link_to t_view(:sign_up), new_user_registration_path %></li>
+<% end %>
